{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 19,
  "lineage": "adc06fb8-151c-3781-f8a3-f78621198280",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DockerServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4f7023847b90238",
            "arn": "arn:aws:ec2:us-east-1:627733612952:instance/i-04f203f5787c136c4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f203f5787c136c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "alex_keys",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07b5193d379326475",
            "private_dns": "ip-10-10-1-144.ec2.internal",
            "private_ip": "10.10.1.144",
            "public_ip": "3.93.246.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06e09fd3c4ae51946",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c9d178c5d1b9cf9c",
            "tags": {
              "Name": "DockerServer"
            },
            "tags_all": {
              "Name": "DockerServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-038d9bdc6d325ffc1"
            ]
          },
          "dependencies": [
            "aws_security_group.InstanceSG",
            "aws_subnet.subnets",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627733612952:internet-gateway/igw-0b90be8359d7cafb7",
            "id": "igw-0b90be8359d7cafb7",
            "owner_id": "627733612952",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-0f474b500ec659335"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627733612952:route-table/rtb-031fb04ebbec555d7",
            "id": "rtb-031fb04ebbec555d7",
            "owner_id": "627733612952",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b90be8359d7cafb7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT"
            },
            "tags_all": {
              "Name": "RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f474b500ec659335"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0147acdcf640894a1",
            "route_table_id": "rtb-031fb04ebbec555d7",
            "subnet_id": "subnet-0c9d178c5d1b9cf9c"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.RT",
            "aws_subnet.subnets",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0147acdcf640894a1",
            "route_table_id": "rtb-031fb04ebbec555d7",
            "subnet_id": "subnet-0c9d178c5d1b9cf9c"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.RT",
            "aws_subnet.subnets",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0147acdcf640894a1",
            "route_table_id": "rtb-031fb04ebbec555d7",
            "subnet_id": "subnet-0c9d178c5d1b9cf9c"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.RT",
            "aws_subnet.subnets",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0147acdcf640894a1",
            "route_table_id": "rtb-031fb04ebbec555d7",
            "subnet_id": "subnet-0c9d178c5d1b9cf9c"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.RT",
            "aws_subnet.subnets",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0147acdcf640894a1",
            "route_table_id": "rtb-031fb04ebbec555d7",
            "subnet_id": "subnet-0c9d178c5d1b9cf9c"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.RT",
            "aws_subnet.subnets",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0147acdcf640894a1",
            "route_table_id": "rtb-031fb04ebbec555d7",
            "subnet_id": "subnet-0c9d178c5d1b9cf9c"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.RT",
            "aws_subnet.subnets",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0147acdcf640894a1",
            "route_table_id": "rtb-031fb04ebbec555d7",
            "subnet_id": "subnet-0c9d178c5d1b9cf9c"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.RT",
            "aws_subnet.subnets",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0147acdcf640894a1",
            "route_table_id": "rtb-031fb04ebbec555d7",
            "subnet_id": "subnet-0c9d178c5d1b9cf9c"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.RT",
            "aws_subnet.subnets",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0147acdcf640894a1",
            "route_table_id": "rtb-031fb04ebbec555d7",
            "subnet_id": "subnet-0c9d178c5d1b9cf9c"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.RT",
            "aws_subnet.subnets",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0147acdcf640894a1",
            "route_table_id": "rtb-031fb04ebbec555d7",
            "subnet_id": "subnet-0c9d178c5d1b9cf9c"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.RT",
            "aws_subnet.subnets",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0147acdcf640894a1",
            "route_table_id": "rtb-031fb04ebbec555d7",
            "subnet_id": "subnet-0c9d178c5d1b9cf9c"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.RT",
            "aws_subnet.subnets",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0147acdcf640894a1",
            "route_table_id": "rtb-031fb04ebbec555d7",
            "subnet_id": "subnet-0c9d178c5d1b9cf9c"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.RT",
            "aws_subnet.subnets",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "InstanceSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627733612952:security-group/sg-038d9bdc6d325ffc1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038d9bdc6d325ffc1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "InstanceSG",
            "name_prefix": "",
            "owner_id": "627733612952",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f474b500ec659335"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627733612952:subnet/subnet-0c9d178c5d1b9cf9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9d178c5d1b9cf9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "627733612952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnetA"
            },
            "tags_all": {
              "Name": "subnetA"
            },
            "vpc_id": "vpc-0f474b500ec659335"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:627733612952:vpc/vpc-0f474b500ec659335",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-015573bb65755c6ad",
            "default_route_table_id": "rtb-0bd614ee85b7ba05d",
            "default_security_group_id": "sg-0152c0c49a0564811",
            "dhcp_options_id": "dopt-03615c4e5a543adbc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f474b500ec659335",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bd614ee85b7ba05d",
            "owner_id": "627733612952",
            "tags": {
              "Name": "VPC"
            },
            "tags_all": {
              "Name": "VPC"
            }
          }
        }
      ]
    }
  ]
}